[package]
name = "day-15-part-2"
version = "0.1.0"
authors = ["Oliver Wright <meiamsome@meiamso.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vm = { path = "../../vm" }
termion = "1.5.4"
day15part1 = { path = "../part-1" }
