[package]
name = "day-17-part-1"
version = "0.1.0"
authors = ["Oliver Wright <meiamsome@meiamso.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vm = { path = "../../vm" }
day15part1 = { path = "../../day-15/part-1" }
